# busca-caminhos-magicos

./: CMakeLists.txt  Makefile  README.md
headers/: dijkstra.h  graph.h  heap.h  limits.h  max_heap.h
src/: dijkstra.c  graph.c  heap.c  main.c  max_heap.c
